modify About Me

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>My name is Jovan P. Timosa, I am second year Computer Science student currently studying at Palawan State University, College of Sciences</p>
     </section>
 
     <section id="portfolio" class="portfolio">
