--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>YJovan P. Timosa</h1>
+        <h1>Jovan P. Timosa</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
@@ -33,20 +33,21 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>BMI Calculator</h3>
+            <p>A program that can compute your BMI and tell you if you're underweight, normal, or overweight</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Rock, Paper, Scissors Program</h3>
+            <p>A simple rock, paper, scissors program</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Email: 202280218@psu.palawan.edu.ph</p>
+        <p>GitHub: https://github.com/JovTim</p>
     </section>
 
     <footer>
